--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,5 @@
 name: "Vprofile IAC"
+
 on:
   push:
     branches:
@@ -14,44 +15,44 @@ on:
 
 env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-  AWS_SECRET_ACCESS_ID: ${{secrets.AWS_SECRET_ACCESS_ID}}
+  AWS_SECRET_ACCESS_ID: ${{secrets.AWS_SECRET_ACCESS_ID}} # Corrected secret name
   BUCKET_TF_STATE: ${{secrets.BUCKET_TF_STATE}}
   AWS_REGION: us-east-2
   EKS_CLUSTER: vprofile-eks
 
 jobs:
   terraform:
-   name: "Apply code changes"
-   runs-on: ubuntu-latest
-   defaults:
-     run:
-      shell: bash
-      working-directory: ./terraform
+    name: "Apply code changes"
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./terraform
 
-  steps:
-    - name: Checkout the source code
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout the source code
+        uses: actions/checkout@v4
 
-    - name: Setup terraform
-      uses: hashicorp/setup-terraform@v2  
+      - name: Setup terraform
+        uses: hashicorp/setup-terraform@v2  
 
-    - name: Terraform init
-      id: init
-      run: terraform init -backend-config="bucket= $BUCKET_TF_STATE"
+      - name: Terraform init
+        id: init
+        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE" # Removed space after "="
 
-    - name: Terraform format
-      id: fmt 
-      run: terraform fmt -check 
+      - name: Terraform format
+        id: fmt 
+        run: terraform fmt -check 
 
-    - name: Terraform Validate
-      id: validate 
-      run: terraform validate  
+      - name: Terraform Validate
+        id: validate 
+        run: terraform validate  
 
-    - name: Terraform Plan
-      id: plan 
-      run: terraform plan -no-color -input=false -out planfile
-      continue-on-error: true
+      - name: Terraform Plan
+        id: plan 
+        run: terraform plan -no-color -input=false -out planfile
+        continue-on-error: true
 
-    - name: Terraform Plan status
-      if: steps.plan.outcome == 'failure'
-      run: exit 1
+      - name: Terraform Plan status
+        if: steps.plan.outcome == 'failure'
+        run: exit 1
