--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -34,7 +34,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup terraform
-        uses: hashicorp/setup-terraform@v3  
+        uses: hashicorp/setup-terraform@v3
+        with:
+            terraform_version: "1.6.3"  
 
       - name: Terraform init
         id: init
